build: update all dependencies

--- a/test/Client.Tests/Client.Tests.csproj
+++ b/test/Client.Tests/Client.Tests.csproj
@@ -20,4 +20,11 @@
         <ProjectReference Include="..\TestingUtils\TestingUtils.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Update="xunit.runner.visualstudio">
+        <PrivateAssets>all</PrivateAssets>
+        <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      </PackageReference>
+    </ItemGroup>
+
 </Project>
