--- a/test/JsonRpc.Tests/JsonRpc.Tests.csproj
+++ b/test/JsonRpc.Tests/JsonRpc.Tests.csproj
@@ -10,4 +10,10 @@
         <EmbeddedResource Include="**/*.jsrpc" />
         <ProjectReference Include="..\TestingUtils\TestingUtils.csproj" />
     </ItemGroup>
+    <ItemGroup>
+      <PackageReference Update="xunit.runner.visualstudio">
+        <PrivateAssets>all</PrivateAssets>
+        <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      </PackageReference>
+    </ItemGroup>
 </Project>
