--- a/test/Dap.Tests/Dap.Tests.csproj
+++ b/test/Dap.Tests/Dap.Tests.csproj
@@ -18,4 +18,10 @@
     <ItemGroup>
         <Folder Include="obj\Release\netcoreapp3.1\" />
     </ItemGroup>
+    <ItemGroup>
+      <PackageReference Update="xunit.runner.visualstudio">
+        <PrivateAssets>all</PrivateAssets>
+        <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      </PackageReference>
+    </ItemGroup>
 </Project>
