--- a/test/Generation.Tests/Generation.Tests.csproj
+++ b/test/Generation.Tests/Generation.Tests.csproj
@@ -13,4 +13,10 @@
         <ProjectReference Include="..\TestingUtils\TestingUtils.csproj" />
         <EmbeddedResource Include="..\..\src\Protocol\**\*Feature.cs" Visible="false" />
     </ItemGroup>
+    <ItemGroup>
+      <PackageReference Update="xunit.runner.visualstudio">
+        <PrivateAssets>all</PrivateAssets>
+        <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      </PackageReference>
+    </ItemGroup>
 </Project>
